# drone_gazebo

./: CMakeLists.txt  ExtendedKalman.m  ExtendedKalman_finished.m  ExtendedKalman_ros.m  README.md  data_v3.mat  gps.csv  package.xml
launch/: drone_world.launch
models/ground_plane/: model.config  model.sdf
models/ground_plane/materials/scripts/: ground_plane.material
scripts/: controller.py  controller_HACK.py  controller_proper_WIP.py
urdf/: drone.gazebo  drone.xacro  macros.xacro
worlds/: drone.world
